# pypi2rpm

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  Makefile  README.md  README.rst  pyproject.toml
pypi2rpm/: __init__.py  cli.py  logger.py  pypi.py  rpm.py  settings.py  util.py
pypi2rpm/templates/: python-package.spec.j2
