[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi2rpm"
authors = [
    {name = "Brandon Perkins", email = "bperkins@redhat.com"},
]
description = "Tool to create RPM Package Manager (RPM) package from a Python Package Index (PyPI) package."
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["PyPI", "RPM"]
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Packaging",
]
dependencies = [
    "colorlog",
    "jinja2",
    "requests",
]
dynamic = ["version"]

[project.optional-dependencies]
mypy = [
    "mypy",
    "types-requests",
]

[project.scripts]
pypi2rpm = "pypi2rpm.cli:main"

[project.urls]
documentation = "https://github.com/bdperkin/pypi2rpm"
homepage = "https://github.com/bdperkin/pypi2rpm"
repository = "https://github.com/bdperkin/pypi2rpm"

[tool.autopep8]
max_line_length = 110

[tool.ruff]
line-length = 110

[tool.ruff.lint]
extend-select = [
    "A",
    "AIR",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "CPY",
    "D",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TD",
    "TID",
    "TRIO",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "D203",
    "D213",
    "ISC001",
]
preview = true

[tool.setuptools.dynamic.version]
attr = "pypi2rpm.version.version"

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "pypi2rpm/version.py"
